[package]
name = "minissh2"
version = "0.0.1-dev"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
minissh2-ring = { path = "minissh2-ring" }
tracing-subscriber = "0.1"

[workspace]
members = [
    ".",
    "minissh2-ring",
]
